# Physical-AI-Humanoid-Robotics-TextBook

./: .gitignore  Dockerfile  README.md
.gemini/tmp/: feature_description.md  feature_description.txt
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  reindex_local_embeddings.py  requirements.txt  test_ingestion.py
backend/alembic/: env.py
backend/alembic/versions/: 48af2ee8d3da_add_user_progress_table.py  54818a5cf0ef_add_user_id_to_conversations.py  6a0ecc98883c_initial_migration.py  bbdc55996be6_add_user_bookmarks_table.py  ed1c29683cb1_add_users_table.py
backend/app/: main.py
backend/app/api/: middleware.py
backend/app/api/routes/: auth.py  chat.py  health.py
backend/app/core/: config.py
backend/app/crud/: chat.py
backend/app/db/: session.py
backend/app/models/: api.py  sql.py
backend/app/services/: rag.py
backend/deploy-backend/: Dockerfile  README.md  requirements.txt
backend/deploy-backend/app/: main.py
backend/deploy-backend/app/api/routes/: chat.py  users.py
backend/deploy-backend/app/core/: auth.py  config.py  errors.py
backend/deploy-backend/app/crud/: user.py
backend/deploy-backend/app/models/: api.py  bookmark.py  progress.py  sql.py  user.py
backend/deploy-backend/app/schemas/: user.py
backend/deploy-backend/app/services/: gemini.py  health.py  qdrant.py
docusaurus/: docusaurus.config.js  package-lock.json  sidebars.js
docusaurus/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  (+5 more)
frontend/: .prettierignore  docusaurus.config.js
(+347 files in other folders)
