[project]
name = "rag-backend-api"
version = "0.1.0"
description = "RAG Chatbot Backend API for Physical AI Textbook"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "openai>=1.12.0",
    "qdrant-client>=1.7.0",
    "cohere>=4.37.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"